testsuite/tests/indexed-types/should_compile/T17405c.hs
module T17405c where

import T17405a
import T17405b
