testsuite/tests/indexed-types/should_fail/OverIndirectThisModC.hs
module OverIndirectThisModC where
import OverIndirectThisModB
